--- a/contact.html
+++ b/contact.html
@@ -54,15 +54,19 @@
       .form-row{flex-direction:column;align-items:stretch}
       .form-row label{width:auto;text-align:left}
       .checkbox{margin-left:0}
+      /* inputs full width on mobile */
+      .form-row input,.form-row select,.form-row textarea{flex:1 1 100%;max-width:100%}
     }
 
     /* Main card & form */
     main .card{background:#fff;border:1px solid #e2e8f0;border-radius:12px;box-shadow:0 1px 3px rgba(0,0,0,.06);padding:24px}
-    h1{font-size:24px;margin:8px 0 20px;text-align:center}
+    h1{font-size:24px;margin:8px 0 8px;text-align:center}
+    .form-note{margin:0 0 16px;text-align:right;font-size:13px;color:#6b7280}
     form{display:grid;gap:16px}
     .form-row{display:flex;align-items:center;gap:16px}
     .form-row label{width:200px;font-weight:600;text-align:right}
-    .form-row input,.form-row select,.form-row textarea{flex:1;padding:10px;border:1px solid #d1d5db;border-radius:8px;font-size:14px;background:#fff}
+    /* ↓ 入力欄をデスクトップで約半幅に */
+    .form-row input,.form-row select,.form-row textarea{flex:0 1 50%;max-width:50%;padding:10px;border:1px solid #d1d5db;border-radius:8px;font-size:14px;background:#fff}
     .form-row select{appearance:auto}
     textarea{resize:vertical;min-height:140px}
     .checkbox{display:flex;align-items:center;gap:8px;margin-left:200px}
@@ -79,6 +83,7 @@
     <div class="container">
       <div class="card" id="content">
         <h1>お問い合わせ</h1>
+        <p class="form-note"><span style="color:#dc2626">*</span> 印は必須項目です。</p>
         <form id="contact-form" novalidate>
           <div class="form-row">
             <label for="name">お名前 <span style="color:#dc2626">*</span></label>
@@ -152,7 +157,7 @@
     const $ = s => document.querySelector(s);
     const toJustify = p => p==='left'?'flex-start':p==='right'?'flex-end':'center';
     const num = (v,f)=>{const n=Number(v);return Number.isFinite(n)&&n>0?n:f};
-    const withFallback = s => !s ? "" : (/(sans-serif|serif|monospace)/i.test(s) ? s : `${s}, sans-serif`);
+    const withFallback = s => !s ? "" : (/\b(sans-serif|serif|monospace)\b/i.test(s) ? s : `${s}, sans-serif`);
     const stripQuotes = s => s ? s.replace(/^['"]+|['"]+$/g,'') : '';
     const bgParts = (row, def) => {
       const grad = stripQuotes(row.bg_gradient||"").trim();
