--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
       max-width:1000px;margin:24px auto;padding:24px;background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08)
     }
     h1{margin:0 0 6px;font-size:28px}
-    .required-note{font-size:14px;color:#555;margin:0 0 20px}
+    .required-note{font-size:14px;color:#555;margin:0 0 20px;text-align:center}
     .form-container{width:55%;margin:0 auto}
     .form-group{display:flex;align-items:center;margin-bottom:14px;gap:12px}
     .form-group label{width:150px;font-weight:700}
@@ -89,7 +89,7 @@
     <div class="container">
       <div class="card">
         <h1>お問い合わせ</h1>
-        <p class="required-note">* <span style="color:red;">*</span> 印は必須項目です。</p>
+        <p class="required-note"><span style="color:red;">*</span> 印は必須項目です。</p>
 
         <form id="contact-form" novalidate>
           <div class="form-container">
@@ -160,13 +160,13 @@
     const sb = createClient(
       "https://htnmjsqgoapvuanrsuma.supabase.co",
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-    ); /* index.txt と同一設定を使用:contentReference[oaicite:3]{index=3} */
+    ); /* indexの設定を踏襲 */
 
-    /* ===== Helpers (indexのロジックを踏襲しつつ、ページ遷移に合わせて最小化) ===== */
+    /* ===== Helpers ===== */
     const $ = s => document.querySelector(s);
     const toJustify = p => p==='left'?'flex-start':p==='right'?'flex-end':'center';
     const num = (v,f)=>{const n=Number(v);return Number.isFinite(n)&&n>0?n:f};
-    const withFallback = s => !s ? "" : (/\b(sans-serif|serif|monospace)\b/i.test(s) ? s : `${s}, sans-serif`);
+    const withFallback = s => !s ? "" : (/(sans-serif|serif|monospace)/i.test(s) ? s : `${s}, sans-serif`);
     const stripQuotes = s => s ? s.replace(/^['"]+|['"]+$/g,'') : '';
     const bgParts = (row, def) => {
       const grad = stripQuotes(row?.bg_gradient||"").trim();
@@ -194,7 +194,7 @@
 
     function renderHeader(d, menus){
       const items = (menus||[]).filter(m=>m.is_active && m.show_in_header)
-        .map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join(""); /* ← SPA差し替えをやめて通常遷移に:contentReference[oaicite:4]{index=4} */
+        .map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join(""); /* 通常のページ遷移 */
 
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.header_font_family ? `font-family:${withFallback(d.header_font_family)};` : "";
@@ -222,7 +222,7 @@
           </div>
         </div>`;
 
-      // 確実固定：header_fixed = true なら fixed を適用（stickyではなく）
+      // 確実固定：header_fixed = true なら fixed を適用
       const bg = $("#hf-header-bg");
       if(d.header_fixed && bg){
         Object.assign(bg.style, {position:"fixed", top:"0", left:"0", right:"0", zIndex:"1000", width:"100%"});
@@ -240,7 +240,7 @@
 
     function renderFooter(d, menus){
       const items = (menus||[]).filter(m=>m.is_active && m.show_in_footer)
-        .map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join(""); /* ← 通常遷移 */
+        .map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join(""); /* 通常遷移 */
 
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.footer_font_family ? `font-family:${withFallback(d.footer_font_family)};` : "";
@@ -298,11 +298,9 @@
     function adjustOffsets(hdr, ftr){
       const headerEl = $("#hf-header-bg");
       const footerEl = $("#hf-footer-bg");
-      // 上側余白
       document.body.style.paddingTop = (hdr?.header_fixed && headerEl)
         ? headerEl.getBoundingClientRect().height + "px"
         : "";
-      // 下側余白
       document.body.style.paddingBottom = (ftr?.footer_fixed && footerEl)
         ? footerEl.getBoundingClientRect().height + "px"
         : "";
@@ -323,7 +321,6 @@
       btn.disabled = true;
 
       const form = e.currentTarget;
-      // 簡易バリデーション
       if(!form.reportValidity()){
         btn.disabled = false;
         return;
@@ -340,7 +337,6 @@
         agree: $("#agree").checked,
         meta_user_ag: navigator.userAgent || null,
         meta_path: location.pathname || null
-        // status, created_at はDBのデフォルトを利用
       };
 
       const { error } = await sb.from("contact_messages").insert(payload);
