--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>お問い合わせ | 合同会社WaJu</title>
 
-  <!-- Favicon / PWA -->
+  <!-- Favicon / PWA（indexの設定を踏襲） -->
   <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png?v=1">
   <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png?v=1">
   <link rel="apple-touch-icon" sizes="180x180" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png?v=1">
@@ -30,10 +30,12 @@
     .slot.brand{flex:0 0 auto}
     .slot.nav{flex:1 1 auto}
     .hf-copy{display:flex;width:100%}
+    /* Mobile nav trigger */
     .hamburger{display:none;appearance:none;border:1px solid #111;background:#fff;color:#111;cursor:pointer;padding:8px;border-radius:10px;box-shadow:0 1px 2px rgba(0,0,0,.12)}
     .hamburger:hover{background:#fff}
     .hamburger:focus-visible{outline:2px solid #93c5fd;outline-offset:2px}
     .hamburger .bar{display:block;width:22px;height:2px;background:currentColor;margin:4px 0;border-radius:2px}
+    /* Drawer */
     .drawer{position:fixed;inset:0;pointer-events:none}
     .drawer .overlay{position:absolute;inset:0;background:rgba(0,0,0,.35);opacity:0;transition:opacity .24s ease}
     .drawer .panel{position:absolute;top:0;right:0;height:100%;width:min(86vw,380px);background:#fff;transform:translateX(100%);
@@ -46,6 +48,7 @@
     .drawer .panel nav{padding:10px 8px;display:flex;flex-direction:column;gap:8px;overflow:auto}
     .drawer .panel nav a{padding:12px 10px;border-radius:10px}
     .drawer .panel nav a:hover{background:#f1f5f9}
+    /* Responsive */
     @media (max-width:768px){
       .container{padding:0 12px}
       :root{--container:100%}
@@ -55,6 +58,7 @@
       .form-container{width:100% !important}
     }
 
+    /* ======= Contact form area ======= */
     main .card{
       max-width:1000px;margin:24px auto;padding:24px;background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08)
     }
@@ -78,6 +82,7 @@
   </style>
 </head>
 <body>
+  <!-- Header / Footer are rendered from Supabase settings -->
   <header id="site-header" class="hf-wrap"></header>
 
   <main id="page-content" aria-live="polite">
@@ -135,6 +140,7 @@
 
   <footer id="site-footer" class="hf-wrap"></footer>
 
+  <!-- Mobile drawer -->
   <div id="mobile-drawer" class="drawer" aria-hidden="true">
     <div class="overlay" data-close></div>
     <div class="panel" role="dialog" aria-modal="true" aria-labelledby="drawer-title">
@@ -149,12 +155,14 @@
   </div>
 
   <script type="module">
+    /* ===== Supabase client ===== */
     const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
     const sb = createClient(
       "https://htnmjsqgoapvuanrsuma.supabase.co",
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-    );
+    ); /* index.txt と同一設定を使用 */
 
+    /* ===== Helpers ===== */
     const $ = s => document.querySelector(s);
     const toJustify = p => p==='left'?'flex-start':p==='right'?'flex-end':'center';
     const num = (v,f)=>{const n=Number(v);return Number.isFinite(n)&&n>0?n:f};
@@ -184,67 +192,170 @@
       addResizeObserver(hdr||{}, ftr||{});
     }
 
+    function linkOf(m){ return (m.url ?? m.href ?? '#'); }
+
     function renderHeader(d, menus){
       const items = (menus||[]).filter(m=>m.is_active && m.show_in_header)
-        .map(m=>`<a href="${m.href}">${m.title}</a>`).join("");
+        .map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
 
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
-      const cls = d.layout_mode==="column" ? "hfbar hf-column" : "hfbar hf-row";
       const ff = d.header_font_family ? `font-family:${withFallback(d.header_font_family)};` : "";
+      const cls = d.layout_mode==="column" ? "hfbar hf-column" : "hfbar hf-row";
       const paddingY = (d.padding && d.padding.trim()) ? d.padding.split(' ')[0] : "8px 0";
       const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
 
       $("#site-header").innerHTML = `
-        <div class="hf-bg" id="hf-header-bg" style="background:${backgroundShorthand};">
+        <div class="hf-bg" id="hf-header-bg" style="background:${backgroundShorthand} !important;background-color:${bgColor} !important;background-image:${bgImage==='none'?'none':bgImage} !important;">
           <div class="container">
             <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
               <div class="slot brand" style="${brandJustifyMargins(d.company_alignment)}">
                 <div class="hf-brand">
-                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" style="max-height:${num(d.logo_height||d.bar_height,60)}px">`:""}
-                  <span>${d.company_name||""}</span>
+                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${num(d.logo_height||d.bar_height,60)}px">`:""}
+                  <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${num(d.header_company_size,18)}px">${d.company_name||""}</span>
                 </div>
               </div>
               <div class="slot nav">
-                <nav class="hf-nav" id="desktop-nav" style="justify-content:${toJustify(d.nav_alignment)}">${items}</nav>
+                <nav class="hf-nav" id="desktop-nav" style="justify-content:${toJustify(d.nav_alignment)};color:${d.nav_color};font-weight:${d.nav_weight};font-size:${num(d.header_nav_size,14)}px">${items}</nav>
               </div>
-              <button id="hamburger" class="hamburger" aria-controls="mobile-drawer" aria-expanded="false">
+              <button id="hamburger" class="hamburger" aria-controls="mobile-drawer" aria-expanded="false" aria-label="メニューを開く">
                 <span class="bar"></span><span class="bar"></span><span class="bar"></span>
               </button>
             </div>
           </div>
         </div>`;
 
-      if(d.header_fixed){
-        const bg=$("#hf-header-bg");
-        Object.assign(bg.style,{position:"fixed",top:"0",left:"0",right:"0",zIndex:"1000",width:"100%"});
+      // 確実固定
+      const bg = $("#hf-header-bg");
+      if(d.header_fixed && bg){
+        Object.assign(bg.style, {position:"fixed", top:"0", left:"0", right:"0", zIndex:"1000", width:"100%"});
+      }
+
+      const btn = $("#hamburger");
+      if(btn){
+        btn.addEventListener("click", ()=> {
+          const open = $("#mobile-drawer").getAttribute("aria-hidden")==="false";
+          if(open) closeDrawer(); else openDrawer();
+        });
       }
     }
 
     function renderFooter(d, menus){
       const items = (menus||[]).filter(m=>m.is_active && m.show_in_footer)
-        .map(m=>`<a href="${m.href}">${m.title}</a>`).join("");
+        .map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
 
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
+      const ff = d.footer_font_family ? `font-family:${withFallback(d.footer_font_family)};` : "";
       const cls = d.layout_mode==="row" ? "hfbar hf-row" : "hfbar hf-column";
+      const paddingY = (d.padding && d.padding.trim()) ? d.padding.split(' ')[0] : "8px 0";
       const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
 
+      const inner = d.layout_mode==="row"
+        ? `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
+           <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`
+        : (d.layout_mode==="nav-top"
+          ? `<nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>
+             <div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>`
+          : `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
+             <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`);
+
       $("#site-footer").innerHTML = `
-        <div class="hf-bg" id="hf-footer-bg" style="background:${backgroundShorthand};">
+        <div class="hf-bg" id="hf-footer-bg" style="background:${backgroundShorthand} !important;background-color:${bgColor} !important;background-image:${bgImage==='none'?'none':bgImage} !important;">
           <div class="container">
-            <div class="${cls}">
-              <nav class="hf-nav">${items}</nav>
-              <div class="hf-copy">${d.footer_text||""}</div>
+            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
+              ${inner}
             </div>
           </div>
         </div>`;
+
+      if(d.footer_fixed){
+        const wrap=$("#hf-footer-bg");
+        Object.assign(wrap.style, {position:"fixed", left:"0", right:"0", bottom:"0"});
+      }
     }
 
+    /* Drawer: build & control */
     function buildDrawer(menus){
-      const list=(menus||[]).filter(m=>m.is_active);
-      $("#drawer-nav").innerHTML=list.map(m=>`<a href="${m.href}">${m.title}</a>`).join("");
+      const list = (menus||[]).filter(m=>m.is_active);
+      const nav = $("#drawer-nav");
+      nav.innerHTML = list.map(m => `<a href="${linkOf(m)}">${m.title}</a>`).join("");
+      $("#drawer-close").addEventListener("click", closeDrawer);
+      $("#mobile-drawer [data-close]").addEventListener("click", closeDrawer);
+      document.addEventListener("keydown", (e)=>{ if(e.key==="Escape") closeDrawer(); });
+    }
+    function openDrawer(){
+      $("#mobile-drawer").setAttribute("aria-hidden","false");
+      $("#hamburger")?.setAttribute("aria-expanded","true");
+      document.body.style.overflow="hidden";
+      setTimeout(()=> $("#drawer-nav a")?.focus(), 30);
+    }
+    function closeDrawer(){
+      $("#mobile-drawer").setAttribute("aria-hidden","true");
+      $("#hamburger")?.setAttribute("aria-expanded","false");
+      document.body.style.overflow="";
+      $("#hamburger")?.focus();
     }
 
+    /* Layout padding for fixed header/footer */
+    function adjustOffsets(hdr, ftr){
+      const headerEl = $("#hf-header-bg");
+      const footerEl = $("#hf-footer-bg");
+      document.body.style.paddingTop = (hdr?.header_fixed && headerEl)
+        ? headerEl.getBoundingClientRect().height + "px"
+        : "";
+      document.body.style.paddingBottom = (ftr?.footer_fixed && footerEl)
+        ? footerEl.getBoundingClientRect().height + "px"
+        : "";
+    }
+    function addResizeObserver(hdr,ftr){
+      const ro = new ResizeObserver(()=>adjustOffsets(hdr,ftr));
+      const h = $("#hf-header-bg"), f = $("#hf-footer-bg");
+      if(h) ro.observe(h); if(f) ro.observe(f);
+      window.addEventListener('resize', ()=>adjustOffsets(hdr,ftr));
+    }
+
+    /* ===== Contact form: insert into contact_messages ===== */
+    async function handleSubmit(e){
+      e.preventDefault();
+      const btn = $("#submit-btn");
+      const fb = $("#feedback");
+      fb.textContent = "";
+      btn.disabled = true;
+
+      const form = e.currentTarget;
+      if(!form.reportValidity()){
+        btn.disabled = false;
+        return;
+      }
+
+      const payload = {
+        name: $("#name").value.trim(),
+        organization: $("#organization").value.trim() || null,
+        email: $("#email").value.trim(),
+        phone: $("#phone").value.trim() || null,
+        category: $("#category").value,
+        subject: $("#subject").value.trim(),
+        message: $("#message").value.trim(),
+        agree: $("#agree").checked,
+        meta_user_ag: navigator.userAgent || null,
+        meta_path: location.pathname || null
+      };
+
+      const { error } = await sb.from("contact_messages").insert(payload);
+      if(error){
+        console.error(error);
+        fb.className = "msg error";
+        fb.textContent = "送信に失敗しました。時間をおいて再度お試しください。";
+      }else{
+        form.reset();
+        fb.className = "msg success";
+        fb.textContent = "送信しました。ありがとうございます。";
+      }
+      btn.disabled = false;
+    }
+
+    /* Boot */
     loadHF();
+    $("#contact-form").addEventListener("submit", handleSubmit);
   </script>
 </body>
 </html>
