--- a/contact.html
+++ b/contact.html
@@ -113,9 +113,9 @@
               <label for="category">お問い合わせ種類 <span style="color:red;">*</span></label>
               <select id="category" name="category" required>
                 <option value="">選択してください</option>
-                <option value="業務提携">業務提携</option>
-                <option value="連携">連携</option>
-                <option value="協業">協業</option>
+                <option value="サービス導入相談">サービス導入相談</option>
+                <option value="業務提携・連携・協業">業務提携・連携・協業</option>
+                <option value="取材・メディア">取材・メディア</option>
                 <option value="その他">その他</option>
               </select>
             </div>
