--- a/contact.html
+++ b/contact.html
@@ -336,7 +336,7 @@
         subject: $("#subject").value.trim(),
         message: $("#message").value.trim(),
         agree: $("#agree").checked,
-        meta_user_ag: navigator.userAgent || null,
+        meta_user_agent: navigator.userAgent || null,
         meta_path: location.pathname || null
       };
 
